<?xml version="1.0"?>
<package format="2">
  <name>raspicat_rosbag</name>
  <version>0.0.1</version>
  <description>The raspicat_rosbag package</description>

  <maintainer email="tatuhirobeike@gmail.com">ikebe</maintainer>

  <license>Apache-2.0 License</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>